Do not use "net.bytebuddy.experimental=true" on JDK 23 build